--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gs-basic",
+  "name": "cascadezen_www",
   "private": true,
   "scripts": {
     "build": "gridsome build",
@@ -7,6 +7,20 @@
     "explore": "gridsome explore"
   },
   "dependencies": {
-    "gridsome": "^0.7.0"
+    "@gridsome/plugin-sitemap": "^0.4.0",
+    "@gridsome/source-filesystem": "^0.6.2",
+    "@gridsome/transformer-remark": "^0.6.1",
+    "@gridsome/vue-remark": "^0.2.2",
+    "@mdjs/core": "^0.3.3",
+    "axios": "^0.19.2",
+    "gridsome": "^0.7.19",
+    "gridsome-helper-json": "^1.0.3",
+    "gridsome-plugin-remark-shiki": "^0.3.1",
+    "gridsome-plugin-rss": "^1.2.0",
+    "vue-fuse": "^2.2.1",
+    "vue-scrollto": "^2.18.2"
+  },
+  "devDependencies": {
+    "gridsome-plugin-tailwindcss": "^3.0.1"
   }
 }
